k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-microservice-deployment
  labels:
    name: training-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      name: training-microservice
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: training-microservice
    spec:
      containers:
        - image: elendilearner/microservice-test:v3
          name: training-microservice-container
          resources:
            requests:
              cpu: "500m"
              memory: "400Mi"
            limits:
              cpu: "1000m"
              memory: "1000Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            timeoutSeconds: 10
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
      restartPolicy: Always
