k8s/Service.yaml
# Specifies the API version for Kubernetes that we are using to create the Service object.
apiVersion: v1

# Defines the kind of resource we are declaring; in this case, a Service.
kind: Service

# Holds the metadata of the object, such as name, labels, and namespace.
metadata:
  # Defines the name for the Service being created. This name is used to reference the service within the cluster.
  name: training-microservice-service

# Holds the specification of the configuration for the object being created.
spec:
  # Defines which pods will be associated with the service using selectors.
  selector:
    # Associates the service with pods that have a label with the key "name" and the value "training-microservice".
    name: training-microservice
  
  # Defines the type of service. ClusterIP makes the service only reachable within the cluster.
  type: ClusterIP

  # Specifies the ports that the service will listen to for incoming connections.
  ports:
    - name: http # Assigns a name to the port, which can be useful if you have multiple ports on one service.
      protocol: TCP # Specifies the transport layer protocol. For web services, this is typically TCP.
      port: 80 # The port on which the service will be exposed within the cluster.
      targetPort: 8000 # The port on the pod where the traffic will be forwarded to. The pods associated with the service should be listening on this port.
