k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-microservice-service
spec:
  selector:
    name: training-microservice
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
