k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-microservice-ingress
  annotations:
    ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/([^/]+)/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: training-microservice-service
            port:
              number: 80
  - http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: training-microservice-service
            port:
              number: 80
