k8s/ingress-common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-microservice-ingress-common
spec:
  ingressClassName: "nginx"
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: training-microservice-service
                port:
                  number: 80
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: training-microservice-service
                port:
                  number: 80
