k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/([^/]+)/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: training-microservice-service
                port:
                  number: 80
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: training-microservice-service
                port:
                  number: 80
